# S3rpent-Media

./: .gitignore  ASSESSMENT_REPORT.md  AmbientGradient.qml  AudioControls.qml  AudioPlayer.qml  AudioUtils.js  AudioVisualizerView.qml  BadAppleEffect.qml  BassPulseWindow.qml  CMakeLists.txt  ColorExtractor.qml  ColorManagementUtils.js  FileDialogManager.qml  FileTypeUtils.js  ImageControls.qml  ImageNavigationArrows.qml  ImageNavigationUtils.js  ImageViewer.qml  LICENSE  Main.qml  MarkdownViewer.qml  MediaChangeHandlerUtils.js  MediaLoaderUtils.js  MediaViewer.qml  MetadataPopup.qml  OpenFileDialog.qml  PdfViewerImpl.qml  SECURITY.md  SECURITY_INDEX.md  SettingsPage.qml  SnowEffect.qml  TextViewer.qml  TitleBar.qml  VULNERABILITY_SUMMARY.md  VideoPlayer.qml  ViewManagementUtils.js  WindowBackground.qml  WindowInitializationManager.qml  WindowLifecycleUtils.js  WindowResizeFunctions.js  (+42 more)
docs/: FFMPEG_SETUP.md  LIBMPV_SETUP.md  README.md
resources/: app.rc
resources/fonts/: license.txt  readme.txt
resources/shaders/: badapple.frag  ffmpeg_video.frag  ffmpeg_video.vert  mpv_video.frag  mpv_video.vert  snow.frag  snowbackground.frag  snowbackground.vert
scripts/: build_app.bat  build_app_6101.bat  build_app_6101_msvc.bat  build_app_6101_msvc_fastdebug_ps.ps1  build_app_6101_msvc_ps.ps1  build_app_6101_msvc_release_ps.ps1  build_app_6102_msvc_fastdebug_ps.ps1  build_installer.bat  build_installer_msvc.bat  build_release.bat  extract_badapple_frames.bat  extract_badapple_frames.py  setup_libmpv.ps1
src/cpp/: audioequalizer.h  audiovisualizer.cpp  colorutils.cpp  colorutils.h  coverartclient.cpp  coverartclient.h  customaudioplayer.h  discordrpc.cpp  discordrpc.h  embeddedsubtitleextractor.cpp  embeddedsubtitleextractor.h  externaldraghelper.cpp  externaldraghelper.h  ffmpegsubtitleextractor.cpp  ffmpegsubtitleextractor.h  ffmpegvideoplayer.cpp  ffmpegvideoplayer.h  ffmpegvideorenderer.cpp  ffmpegvideorenderer.h  lastfmclient.cpp  lrclibclient.cpp  lyricstranslationclient.cpp  main.cpp  mediaplayerwrapper.cpp  mediaplayerwrapper.h  modelsourceresolver.cpp  modelsourceresolver.h  mpvglwidget.cpp  mpvglwidget.h  mpvqmlcontainer.cpp  mpvqmlcontainer.h  mpvqmlitem.cpp  mpvqmlitem.h  mpvvideoplayer.cpp  mpvvideoplayer.h  singleinstancemanager.cpp  singleinstancemanager.h  subtitleformatter.cpp  subtitleformatter.h  vlcvideoitem.cpp  (+13 more)
src/js/: AudioProcessingFunctions.js  DebugUtils.js  FileTypeUtils.js  MediaChangeHandlerUtils.js  MediaFormatUtils.js  MediaLoaderFunctions.js  MediaUnloadUtils.js  ViewManagementUtils.js  WindowLifecycleUtils.js
src/qml/: AmbientGradient.qml  AppShortcuts.qml  AudioControls.qml  AudioPlayer.qml  AudioVisualizerView.qml  BackdropBlur.qml  BadAppleEffect.qml  BassPulseManager.qml  DebugConsole.qml  EmptyState.qml  GradientBackground.qml  ImageThumbnailPopup.qml  InputHandlers.qml  MPVVideoPlayerComponent.qml  MPVVideoPlayerComponentD3D11.qml  Main.qml  MainContentArea.qml  MediaViewerLoaders.qml  MetadataPopup.qml  MetadataPopupManager.qml  ModelViewer.qml  ModelViewerImpl.qml  OpenFileDialog.qml  PdfViewer.qml  SettingsPage.qml  SnowEffect.qml  TextViewer.qml  TitleBar.qml  ToastNotification.qml  UndertaleFight.qml  VideoPlayer.qml  WindowResizeTimers.qml  ZipViewer.qml
src/qml/shaders/: skin_material.frag  skin_material.vert
translations/: s3rp3nt_media_ro.ts  s3rpent_media_ro.ts
